--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TutorialAngularStylingBootstrap</title>
+  <title>TutorialAngularCliStylingBootstrap</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
